# scpp

./: .gitignore  CMakeLists.txt  README.md  crc32.c  crc32.h  proto_cmd_list.h  proto_cmd_list_default.h  proto_data_parse.c  proto_data_parse.h  proto_types.h
console/: cli.py  commands.py  console.py  logger_data_structures.py  requirements.txt  test_data.py  xcrc32.py
test/: crc_test.c
